OpenJMLTest/test/textBlock6/expected
test/textBlock6/Test.java:5: error: unclosed text block
			"""
			^
test/textBlock6/Test.java:7: error: ';' expected
			  def
^
test/textBlock6/Test.java:8: error: ';' expected
			ghi
			   ^
Operation not performed because of parse or type errors
3 errors
